automatic project update for v8.0.0-beta.1